# MyCalculator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CmakeLists.txt  Makefile  cmake_install.cmake
src/: main.cpp
src/calc_backend/: calculator.cpp  calculator.hpp
src/calc_window/: main_window.cpp  main_window.hpp
